--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,10 @@
   align-items: center;
   gap: clamp(20px, 100%, 100px);
 }
+
+#matches-list > div{
+  max-width: calmp(50px, 20%, 100px);
+}
 #matches-list li img {
 
   width: 50px;
@@ -30,11 +34,15 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  flex-grow: 1;
+
 }
 #teams {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  flex-grow: 1;
+
 }
 #goals {
   display: flex;
@@ -42,4 +50,14 @@
   flex-grow: 1;
   flex-direction: column;
   gap: 1rem;
+}
+
+#status {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+#venue {
+  display: flex;
+  flex-grow: 1;
 }
