--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: clamp(20px, 100%, 100px);
+  gap: 1rem;
 }
 
 #matches-list li.league-header {
@@ -37,9 +37,6 @@
   font-weight: bold;
 }
 
-#matches-list > div{
-  max-width: calmp(50px, 20%, 100px);
-}
 #matches-list li img {
 
   width: 50px;
@@ -50,34 +47,45 @@
   flex-direction: column;
   gap: clamp(20px, 100%, 100px);
 } */
+#matches-list li > div {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+
 #teams-logos {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  flex-grow: 1;
-
 }
+
 #teams {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  flex-grow: 1;
-
+  text-align: center;
 }
+
 #goals {
   display: flex;
-  text-align: right;
-  flex-grow: 1;
   flex-direction: column;
   gap: 1rem;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.2rem;
 }
 
 #status {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
+  gap: 1rem;
+  text-align: center;
 }
+
 #venue {
   display: flex;
-  flex-grow: 1;
+  text-align: center;
 }
