--- a/src/App.css
+++ b/src/App.css
@@ -10,44 +10,60 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #0e100f;
+
 }
 
 .option-btn {
+  background-color: #242526;
   display: flex;
+  flex-direction: row;
+  min-height: 10vh;
+  gap: 2rem;
   justify-content: center;
-  gap: 1rem;
-  padding: 1rem;
-  background-color: #f5f5f5;
-  border-bottom: 2px solid #e0e0e0;
-  position: sticky;
-  top: 0;
-  z-index: 100;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .option-btn button {
-  padding: 0.75rem 2rem;
-  font-size: 1rem;
+  background-color: #0e100f;
+  border: 2px solid #7c7c6f;
+  color: #7c7c6f;
   font-weight: 600;
-  border: 2px solid #2c3e50;
-  border-radius: 8px;
-  background-color: white;
-  color: #2c3e50;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  min-width: 120px;
 }
 
 .option-btn button:hover {
-  background-color: #2c3e50;
-  color: white;
-  transform: translateY(-2px);
+  
+  color: #abff84;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.option-btn button:active {
-  transform: translateY(0);
+.content{
+  min-height: 75vh;
+  /* background-color: #fff; */
 }
+
+.hitStat{
+    font-weight: 600;
+    color: #fffce4;
+}
+
+#matches-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  padding: 0.5rem;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  list-style: none;
+  padding-left: 0;
+}
+
+#matches-list > .league-header{
+  background-color: auto;
+}
+
 
 footer {
   text-align: center;
@@ -71,13 +87,14 @@ main {
 @media (max-width: 480px) {
   .option-btn {
     padding: 0.75rem;
-    gap: 0.5rem;
+    gap: 2.5rem;
   }
 
   .option-btn button {
-    padding: 0.6rem 1rem;
+    padding: 0.3rem 0.6rem;
     font-size: 0.9rem;
     min-width: 100px;
+    border-radius: 10px;
   }
 
   main {
