--- a/src/styles/live.css
+++ b/src/styles/live.css
@@ -23,6 +23,29 @@ main > p {
   color: #fffce4 ;
 
 }
+.result{
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#matches-list{
+  display: flex;
+  flex-direction: column;
+}
+
+.league-header{
+  width: 90%;
+  border-bottom: 2px solid #fffce4;
+  align-self: left;
+  font-size: 1rem;
+  color: #fffce4;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
 /* Mobile Responsive Styles */
 @media (max-width: 768px) {
   main > p {
