--- a/src/styles/MatchDetails.css
+++ b/src/styles/MatchDetails.css
@@ -18,7 +18,7 @@
 }
 
 .back-button:hover {
-  background: #0056b3;
+  background: #fffce4;
 }
 
 .match-header {
@@ -50,6 +50,9 @@
 }
 
 .competition-emblem {
+  background-color: #fffce4;
+  border-radius: 8px;
+  padding: 8px;
   width: 56px;
   height: 56px;
   object-fit: contain;
@@ -263,6 +266,10 @@
     font-size: 2em;
   }
 
+  .match-vs > p{
+  font-size: 1.7rem;
+  }
+
   .team-logo-container > img {
     width: 90px;
     height: 90px;
@@ -304,6 +311,9 @@
   .team-card{
     flex-direction: column-reverse;
 
+  }
+  .match-vs > p{
+  font-size: 1.4rem;
   }
   .match-header h1 {
     font-size: 1.6em;
